Fix input type number arrows covering year input in Safari

--- a/src/style/flatpickr_base.styl
+++ b/src/style/flatpickr_base.styl
@@ -134,7 +134,7 @@
 		box-sizing border-box
 		color inherit
 		cursor default
-		padding 0 0 0 2px
+		padding 0
 		margin 0
 		width 3.2em
 		display inline
